--- a/app/src/main/res/layout/knowledge_item.xml
+++ b/app/src/main/res/layout/knowledge_item.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_margin="8dp"
     android:id="@+id/container"
+    style="?materialCardViewElevatedStyle"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:clickable="true"
     android:focusable="true">
 
@@ -19,6 +21,7 @@
             tools:src="@drawable/ic_send" />
 
         <TextView
+            android:layout_margin="8dp"
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
