--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -77,7 +77,7 @@
         <action
             android:id="@+id/action_loginFragment_to_wallFragment"
             app:destination="@id/wallFragment"
-            app:popUpTo="@id/wallFragment"
+            app:popUpTo="@id/loginFragment"
             app:popUpToInclusive="true" />
         <action
             android:id="@+id/action_loginFragment_to_registerFragment"
