--- a/app/src/main/res/layout/fragment_wall.xml
+++ b/app/src/main/res/layout/fragment_wall.xml
@@ -8,7 +8,7 @@
 
         <variable
             name="viewModel"
-            type="com.tigro.lajoie.WallViewModel" />
+            type="com.tigro.lajoie.screens.wall.WallViewModel" />
 
         <import type="android.view.View" />
 
