--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -67,12 +67,23 @@
     </fragment>
     <fragment
         android:id="@+id/knowledgeCategory"
-        android:name="com.tigro.lajoie.screens.knowledge.KnowledgeCategory">
+        android:name="com.tigro.lajoie.screens.knowledge.KnowledgeCategoryFragment">
         <argument
             android:name="knowledgeId"
             app:argType="integer" />
         <argument
             android:name="knowledgeName"
             app:argType="string" />
+        <action
+            android:id="@+id/action_knowledgeCategory_to_knowledgeDetailFragment"
+            app:destination="@id/knowledgeDetailFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/knowledgeDetailFragment"
+        android:name="com.tigro.lajoie.screens.knowledge.KnowledgeDetailFragment"
+        android:label="" >
+        <argument
+            android:name="knowledgeIndex"
+            app:argType="integer" />
     </fragment>
 </navigation>
