--- a/app/src/main/res/layout/wall_item.xml
+++ b/app/src/main/res/layout/wall_item.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="20dp"
+    android:clickable="true"
     android:focusable="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -36,13 +37,6 @@
             app:layout_constraintBottom_toBottomOf="@id/profile_picture"
             app:layout_constraintStart_toStartOf="@id/username"
             tools:text="30 minutes ago" />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_send"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/profile_picture" />
 
         <TextView
             android:id="@+id/title"
