--- a/app/src/main/res/layout/fragment_knowledge_detail.xml
+++ b/app/src/main/res/layout/fragment_knowledge_detail.xml
@@ -19,7 +19,8 @@
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        tools:context=".screens.knowledge.KnowledgeDetailFragment">
 
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/toolbar_container"
@@ -39,10 +40,10 @@
             app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
             <LinearLayout
-                android:padding="8dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:padding="8dp">
 
                 <TextView
                     style="@style/TextAppearance.Material3.DisplayMedium"
