--- a/app/src/main/res/layout/fragment_knowledge_detail.xml
+++ b/app/src/main/res/layout/fragment_knowledge_detail.xml
@@ -30,7 +30,8 @@
             <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                app:layout_scrollFlags="scroll|enterAlways|snap" />
         </com.google.android.material.appbar.AppBarLayout>
 
         <androidx.core.widget.NestedScrollView
