Fix wrong import for ApiStatus

--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -4,7 +4,7 @@
 
     <data>
         <import type="android.view.View" />
-        <import type="com.tigro.lajoie.screens.auth.ApiStatus" />
+        <import type="com.tigro.lajoie.utils.ApiStatus" />
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
