--- a/app/src/main/res/layout/fragment_knowledge.xml
+++ b/app/src/main/res/layout/fragment_knowledge.xml
@@ -6,7 +6,7 @@
             name="viewModel"
             type="com.tigro.lajoie.screens.knowledge.KnowledgeViewModel" />
         <import type="android.view.View" />
-        <import type="com.tigro.lajoie.screens.auth.ApiStatus" />
+        <import type="com.tigro.lajoie.utils.ApiStatus" />
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
