--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -12,7 +12,7 @@
 
         <import type="android.view.View" />
 
-        <import type="com.tigro.lajoie.screens.auth.ApiStatus" />
+        <import type="com.tigro.lajoie.utils.ApiStatus" />
     </data>
 
 
