--- a/app/src/main/res/layout/fragment_wall_history.xml
+++ b/app/src/main/res/layout/fragment_wall_history.xml
@@ -84,6 +84,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
+                    app:listHistory="@{viewModel.historyData}"
                     android:nestedScrollingEnabled="false"
                     android:visibility="@{viewModel.status == ApiStatus.LOADING ? View.INVISIBLE : View.VISIBLE}"
                     app:layout_constraintStart_toStartOf="parent"
