--- a/app/src/main/res/layout/knowledge_item.xml
+++ b/app/src/main/res/layout/knowledge_item.xml
@@ -1,30 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_margin="8dp"
-    android:id="@+id/container"
-    style="?materialCardViewElevatedStyle"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:clickable="true"
-    android:focusable="true">
 
-    <LinearLayout
+<layout>
+
+    <data>
+
+        <variable
+            name="knowledge"
+            type="com.tigro.lajoie.models.Knowledge" />
+    </data>
+
+    <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/container"
+        style="?materialCardViewElevatedStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_margin="8dp"
+        android:clickable="true"
+        android:focusable="true">
 
-        <ImageView
-            android:id="@+id/image"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="250dp"
-            tools:src="@drawable/ic_send" />
-
-        <TextView
-            android:layout_margin="8dp"
-            android:id="@+id/title"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="Disease" />
-    </LinearLayout>
-</com.google.android.material.card.MaterialCardView>
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/image"
+                app:imageUrl="@{knowledge.picture}"
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
+                android:scaleType="centerCrop"
+                tools:src="@drawable/ic_send" />
+
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:text="@{knowledge.name}"
+                tools:text="Disease" />
+        </LinearLayout>
+    </com.google.android.material.card.MaterialCardView>
+</layout>
